UTF-8への変更とMakefileの作成

--- a/kaikou_abstract2006.sty
+++ b/kaikou_abstract2006.sty
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%   ³¤¹ÖÏÀÊ¸½¸¥¢¥Ö¥¹¥È¥é¥¯¥È
+%   æµ·è¬›è«–æ–‡é›†ã‚¢ãƒ–ã‚¹ãƒˆãƒ©ã‚¯ãƒˆ
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setlength{\oddsidemargin}{-1in}
 \addtolength{\oddsidemargin}{30mm}
@@ -13,13 +13,13 @@
 \newlength{\kanjiW}
 \newlength{\kanjiS}
 \newlength{\Pindnt}
-\settowidth{\kanjiwidth}{³¤}\typeout{´Á»ú£±Ê¸»ú¤ÎÉı = \the\kanjiwidth}
-\kanjiW = 39\kanjiwidth     \typeout{´Á»ú50Ê¸»ú¤ÎÉı = \the\kanjiW}
-\kanjiS = \textwidth        \typeout{£±¹Ô¤ÎÉı = \the\kanjiS}
-\advance\kanjiS by -\kanjiW \typeout{£±¹ÔÅö¤¿¤ê¤Î¥°¥ë¡¼¤ÎÉı = \the\kanjiS}
-\divide\kanjiS by 39        \typeout{´Á»ú£±Ê¸»úÅö¤¿¤ê¤Î¥°¥ë¡¼¤ÎÉı = \the\kanjiS}
+\settowidth{\kanjiwidth}{æµ·}\typeout{æ¼¢å­—ï¼‘æ–‡å­—ã®å¹… = \the\kanjiwidth}
+\kanjiW = 39\kanjiwidth     \typeout{æ¼¢å­—50æ–‡å­—ã®å¹… = \the\kanjiW}
+\kanjiS = \textwidth        \typeout{ï¼‘è¡Œã®å¹… = \the\kanjiS}
+\advance\kanjiS by -\kanjiW \typeout{ï¼‘è¡Œå½“ãŸã‚Šã®ã‚°ãƒ«ãƒ¼ã®å¹… = \the\kanjiS}
+\divide\kanjiS by 39        \typeout{æ¼¢å­—ï¼‘æ–‡å­—å½“ãŸã‚Šã®ã‚°ãƒ«ãƒ¼ã®å¹… = \the\kanjiS}
 \advance\Pindnt by \kanjiwidth
-\advance\Pindnt by \kanjiS  \typeout{¥¤¥ó¥Ç¥ó¥È¤ÎÉı = \the\Pindnt}
+\advance\Pindnt by \kanjiS  \typeout{ã‚¤ãƒ³ãƒ‡ãƒ³ãƒˆã®å¹… = \the\Pindnt}
 \kanjiskip  = \the\kanjiS plus 0pt minus 1pt
 \xkanjiskip = \the\kanjiS plus 0pt minus 1pt
 \parindent  = \Pindnt
@@ -30,5 +30,5 @@
 \abovedisplayshortskip 2pt plus 0pt minus 2pt
 \belowdisplayshortskip 3pt plus 0pt minus 3pt
 %=====================================================================
-\def\Section#1{\par\noindent{\bf¡Ú#1¡Û¡¡}}
+\def\Section#1{\par\noindent{\bfã€#1ã€‘ã€€}}
 \def\Title#1{\par\noindent\centerline{\bf#1}\par\vspace{\baselineskip}}
