--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % 2006 海講 アブストラクトサンプル
 % 異常波浪の発生に及ぼす非線型干渉とスペクトル形状の影響
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[a4,11pt]{jarticle}
+\documentclass[11pt,dvipdfmx]{jarticle}
 \usepackage{kaikou_abstract2006}
 \usepackage{graphicx}
 %====================================================================
